manifests/cluster-addons/cloudflared/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflared-metrics
  namespace: cloudflared
spec:
  ports:
    - name: metrics
      port: 2000
      protocol: TCP
      targetPort: metrics
