manifests/cluster-addons/cloudflared/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared
  namespace: cloudflared
spec:
  endpointSelector: {}

  ingress: []

  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: '7844'
              protocol: UDP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - rules:
            http: []
          ports:
            - port: '9000'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - rules:
            http: []
          ports:
            - port: '53'
              protocol: TCP
            - port: '53'
              protocol: UDP
